Thu Aug 24 03:11:54 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.c: use g_path_get_basename instead of g_basename

Thu Aug 24 02:17:20 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.c: remove g_hash_table_freeze calls as freeze/thaw
	  on hash tables is deprecated

Thu Aug 24 01:45:11 2000  George Lebl <jirka@5z.com>

	* gnome-mime.c: remove include of gtk/gtk.h

	* libgnome.h: remove gnome-dentry.h as it's in libcompat now

	* gnome-init2.c, gnome-ditem.c: whoops, it's g_path_get_basename not
	  g_path_basename

2000-08-07  Martin Baulig  <baulig@suse.de>

	Moved all deprecated files (i.e the ones that were linked into
	libgnome-1-compat and not into libgnome) into their own
	subdirectory (../libcompat).

	* gnome-dentry.c, gnome-dentry.h, gnome-help.c, gnome-help.h,
	gnome-popt.c, gnome-popt.h, gnome10-compat.c, gnome10-compat.h,
	libgnome-compat-1.0.h: Moved to ../libcompat/.

	* gnome-ditem.c: #include <popt.h> directly and not the deprecated
	"gnome-popt.h"
	* gnome-url.c: Likewise.

2000-07-31  Karl Eichwalder  <ke@suse.de>

	* gnome-moz-remote2.c: Add missing dots.

2000-07-16  Jaka Mocnik  <jaka@barbara>

	* gnome-help.h (gnome_help_goto, gnome_help_pbox_goto): actually
	add the const stuff.

Fri Jul 14 01:41:05 2000  George Lebl <jirka@5z.com>

	* gnome-dentry.[ch]: s/int/gboolean/

	* gnome-help.[ch]: add const stuff

	* gnome-history.[ch]: add const stuff and GnomeHistoryEnt is a
	  typedef to the structure and NOT the pointer as this is
	  inconsistent with the rest of gnome and plain ugly

	* gnome-mime-info.[ch]: const stuff

	* gnome-regex.h: use a standard looking typedef for the structure

	* gnome-score.[ch]: const stuff

	* gnome-url.[ch]: GnomeURLDisplayContext again a typedef to
	  the structure NOT the pointer so that we are consistent again

	* gnomelib-init.[ch], gnomelib-init2.[ch]: const stuff

Wed Jul 12 02:25:14 2000  George Lebl <jirka@5z.com>

	* gnome-config.c, gnome-ditem.c, gnome-i18n.[ch], gnome-mime-info.c,