@@ -1,3 +1,7 @@
+Wed Aug 30 22:22:47 2000  George Lebl <jirka@5z.com>
+
+	* Makefile.am: cosmetic cleanups done in search of errors
+
 Thu Aug 24 03:11:54 2000  George Lebl <jirka@5z.com>
 
 	* gnome-ditem.c: use g_path_get_basename instead of g_basename
